# htmlcrypt

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  LICENSE  README.md  mypy.ini  pyproject.toml  tox.ini
.changelog/unreleased/added/: 20221025210804  20221025210914  20221025222528  20221025224245  20221026171308  20221027162004  20221028105155
.changelog/unreleased/changed/: 20221025222448  20221025232633  20221026000534  20221026184225
.changelog/unreleased/fixed/: 20221025232459  20221026202124  20221027162029  20221027162213
src/htmlcrypt/: __init__.py  __main__.py  decrypt.html  decrypt.py  encrypt.py
tests/: test_cli.py
